--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             // Отображаем таймер на странице
             document.getElementById('timer').innerHTML = 
-                `До 10 мая 2025: ${days} дней ${hours} часов ${minutes} минут ${seconds} секунд`;
+                `До алкогольного отравления: ${days} дней ${hours} часов ${minutes} минут ${seconds} секунд`;
         }, 1000);
     </script>
 </body>
