--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </style>
 </head>
 <body>
-    <h1>БОТАНИКА ЕПТА</h1>
+    <h1>БОТАНИКА ЁПТА</h1>
 
     <div class="timer-container">
         <span class="timer-label">До алкогольного отравления осталось:</span>
@@ -105,7 +105,7 @@
 
     <script>
         // Устанавливаем целевую дату (10 мая 2025 года)
-        const targetDate = new Date('May 10, 2025 00:00:00').getTime();
+        const targetDate = new Date('May 10, 2025 13:00:00').getTime();
 
         // Обновляем таймер каждую секунду
         const timerInterval = setInterval(() => {
@@ -114,7 +114,7 @@
 
             if (timeDifference <= 0) {
                 clearInterval(timerInterval);
-                document.getElementById('timer').innerHTML = 'ЧЕГО ты ждёшь?? Время бухать пришло ЁПТА!';
+                document.getElementById('timer').innerHTML = 'ЧЕГО ты ждёшь?? Время бухать пришло ЁПТА! ЕХАЙ В БОТАНИКУ!!1';
                 return;
             }
 
