--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div style="margin-top: 50px;">
         <h2>А пока ждёшь, можешь развлечься</h2>
         <iframe 
-            src="game/index.html" 
+            src="https://drive.google.com/uc?export=download&id=1Q7tvprup28QV2Vk0lGSR0VXwtzZNxKwE" 
             width="960" 
             height="600" 
             frameborder="0">
